login separation fix on movile devices & table column align fix & padding fix in 'My Storage'

--- a/src/assets/styles/components/table.scss
+++ b/src/assets/styles/components/table.scss
@@ -75,3 +75,7 @@
     display: none;
   }
 }
+
+.file-name, .row-name{
+  width: 39%;
+}
